--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>abdul</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="image/aa.jpg">
     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum vel, assumenda, temporibus provident deserunt obcaecati alias qui saepe quae reprehenderit, voluptatum ullam earum ipsam autem. Maxime doloremque, sapiente dolorem in delectus reiciendis commodi pariatur vel, architecto veritatis expedita! Autem dolorum ullam sapiente cum rem ea odio aliquid debitis optio enim quos, exercitationem laudantium atque, ipsum, a veritatis. Qui expedita quibusdam doloribus voluptatem suscipit itaque, delectus minima deleniti corrupti ullam amet nihil optio? Veritatis excepturi ratione eos quibusdam ut modi repellat rem nemo! Minus voluptatibus soluta, quam quibusdam dignissimos veritatis nihil cupiditate perferendis. Pariatur labore incidunt nulla expedita adipisci tenetur autem quia ipsam, esse nesciunt voluptatem ipsum maxime sunt assumenda architecto nostrum est in reprehenderit distinctio sequi ducimus nemo exercitationem ad voluptatum. Nihil odio, animi labore temporibus ab nisi itaque. Hic tenetur culpa odio corrupti eaque dolore amet consequuntur fuga dolorem harum. Voluptas repellat provident obcaecati quisquam quae. Eaque ratione asperiores, iure odit quibusdam vitae neque qui. Minima molestias doloremque quidem consequuntur vero exercitationem accusamus dolorem quasi corporis enim ad quo, rerum dignissimos quis porro sapiente iusto tempora deserunt veniam illo quam. Culpa in recusandae id ratione reprehenderit perferendis repellat. Neque dolorum explicabo dolorem, consequatur cum perferendis dolores eaque facilis tempore.</p>
     
 </body>
